# atlas_sculptor

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
atlas_sculptor/core/: __init__.py  animation.py  edit_mode.py  frames.py  layers.py  node.py  selection.py
atlas_sculptor/ui/: constants.py  edit_controller.py  frame_panel.py  main.py  widgets.py
docs/: architecture.md  core.md  developer_guide.md  getting_started.md  index.md  maya_setup.md  ui.md  user_guide.md
src/atlas_sculptor/core/: __init__.py  config.py  frames.py  logic.py  node.py
src/atlas_sculptor/core/legacy/: logic.py
src/atlas_sculptor/core/models/: animation.py  config.py  layers.py
src/atlas_sculptor/core/scene/: frames.py  node.py  selection.py
src/atlas_sculptor/core/states/: edit_mode.py
src/atlas_sculptor/ui/: __init__.py  delete_dialog.py  dialog.py  frame_panel.py  launcher.py  selection_sync.py  widgets.py  window.py
src/atlas_sculptor/ui/controllers/: edit_controller.py  frame_panel.py  selection_sync.py
src/atlas_sculptor/ui/resources/: constants.py  stylesheet.py
src/atlas_sculptor/ui/views/: dlg_delete_node.py  main_window.py
src/atlas_sculptor/ui/widgets/: layer_row.py
tests/: README.md  conftest.py
tests/core/: test_animation.py  test_config.py  test_edit_mode.py  test_frames.py  test_layers.py  test_node.py  test_selection.py
tests/ui/: conftest.py  test_dlg_delete_node.py  test_launcher.py  test_layer_row.py  test_main_window.py
